# one-skills-manager

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yaml
one_skills_manager/: __init__.py  agents.py  cli.py  config.py  skills.py  sync.py
tests/: test_config.py  test_skills.py  test_sync.py
