[project]
name = "one-skills-manager"
version = "1.0.0"
description = "Manage and sync AI agent skills across Claude Code, Cursor, Windsurf, and Codex"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
keywords = ["ai", "agents", "skills", "claude", "cursor", "windsurf", "codex"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.27",
]

[project.scripts]
one-skills = "one_skills_manager.cli:cli"

[project.urls]
Homepage = "https://github.com/timothybryant/one-skills-manager"
Repository = "https://github.com/timothybryant/one-skills-manager"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["one_skills_manager"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "python-semantic-release>=10.0",
]

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "refactor",
    "fix",
    "perf",
    "style",
    "docs",
    "ci",
    "test",
    "feat",
    ":boom:",
    "BREAKING_CHANGE",
]
major_tags = [":boom:", "BREAKING_CHANGE"]
minor_tags = ["feat"]
patch_tags = [
    "fix",
    "perf",
    "style",
    "docs",
    "ci",
    "test",
    "refactor",
    "chore",
    "build",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "uv build"
dist_path = "dist/"
upload_to_vcs_release = true
upload_to_pypi = false
remove_dist = false
patch_without_tag = true
